--- a/templates/auth/index.html.twig
+++ b/templates/auth/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TestController!{% endblock %}
+{% block title %}Hello AuthController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>C:/Users/Nikoloz/Desktop/Co-NM/$++/ProjectAlpha/alphaProject/src/Controller/TestController.php</code></li>
-        <li>Your template at <code>C:/Users/Nikoloz/Desktop/Co-NM/$++/ProjectAlpha/alphaProject/templates/test/index.html.twig</code></li>
+        <li>Your controller at <code>C:/Users/Nikoloz/Desktop/Co-NM/$++/ProjectAlpha/alphaProject/src/Controller/AuthController.php</code></li>
+        <li>Your template at <code>C:/Users/Nikoloz/Desktop/Co-NM/$++/ProjectAlpha/alphaProject/templates/auth/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
