--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -77,5 +77,94 @@ h1 {
     text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
     letter-spacing: 2px;
 }
+/*Modal*/
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal.hidden {
+  display: none;
+}
+
+.modal-content {
+  background-color: #1e1e1e;
+  border: 4px solid var(--damage-color);
+  padding: 2rem;
+  text-align: center;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  box-shadow: 0 0 12px var(--damage-color);
+}
+
+.modal-content button {
+  margin: 10px;
+  padding: 10px 16px;
+  border: 4px solid white;
+  background-color: black;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.modal-content button:hover {
+  background-color: var(--damage-color);
+  color: black;
+  border-color: black;
+}
+/*Messages flash*/
+.flash-message {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 1000;
+  background-color: #1e1e1e;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  padding: 1rem 2rem;
+  border: 4px solid var(--primary-color);
+  box-shadow: 0 0 12px var(--primary-color);
+  text-align: center;
+  animation: flashSlide 2s ease-in-out forwards;
+}
+
+.flash-message.hide {
+  display: none !important;
+}
+
+
+.flash-message.hide {
+  display: none !important;
+}
+
+
+.flash-success {
+  border-color: var(--health-color);
+  box-shadow: 0 0 8px var(--health-color);
+  color: var(--health-color);
+}
+
+.flash-error {
+  border-color: var(--damage-color);
+  box-shadow: 0 0 8px var(--damage-color);
+  color: var(--damage-color);
+}
+.flash-message.hide {
+  display: none !important;
+}
+
+
+
 
 
