--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -1,12 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Menu{% endblock %}
+{% block title %}Game Menu{% endblock %}
 
 {% block body %}
-    <div class="container mt-5">
-        <h1>Menu</h1>
-<button><i class="fas fa-skull-crossbones fa-beat" style="color:red;"></i>
-</button>
-    </div>
+<div class="menu-container">
+    <h1 class="menu-title">Menu</h1>
+{% if user.characters|length > 0 %}
+{% for character in user.characters %}
+    <a href="/app/character/{{ character.id }}" class="menu-link">
+        <img src="{{ asset(character.hero.image) }}"alt="Preview" style="width: 50px;">
+        {{ character.name }}
+    </a>
+{% endfor %}
 
+
+    <a href="/app/character/create" class="menu-link">
+        <i class="fas fa-user-plus"></i> Create a new Character
+    </a>
+{% else %}
+    <a href="/app/character/create" class="menu-link">
+        <i class="fas fa-user-plus"></i> Create Character
+    </a>
+{% endif %}
+    <a href="/app/lootbox" class="menu-link">
+        <i class="fas fa-gift"></i> Open Loot Boxes
+    </a>
+
+    <a href="/app/inventory" class="menu-link">
+        <i class="fas fa-boxes-stacked"></i> Inventory
+    </a>
+
+    <a href="/app/settings" class="menu-link">
+        <i class="fas fa-cog"></i> Settings
+    </a>
+
+    <a href="/app/about" class="menu-link">
+        <i class="fas fa-book"></i> About Game
+    </a>
+</div>
 {% endblock %}
