--- a/templates/character/create.html.twig
+++ b/templates/character/create.html.twig
@@ -21,7 +21,7 @@
                 <span class="stat-label">Strength</span>
                 <div class="stat-buttons">
                     <button type="button" data-action="click->stats#decrease" data-stat="strength">–</button>
-                    <input type="text" name="strength" value="1" readonly class="stat-value" data-stats-target="strength">
+                    <input type="text" name="strength" value="1" readonly class="stat-value-create" data-stats-target="strength">
                     <button type="button" data-action="click->stats#increase" data-stat="strength">+</button>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 <span class="stat-label">Defense</span>
                 <div class="stat-buttons">
                     <button type="button" data-action="click->stats#decrease" data-stat="defense">–</button>
-                    <input type="text" name="defense" value="1" readonly class="stat-value" data-stats-target="defense">
+                    <input type="text" name="defense" value="1" readonly class="stat-value-create" data-stats-target="defense">
                     <button type="button" data-action="click->stats#increase" data-stat="defense">+</button>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                 <span class="stat-label">Speed</span>
                 <div class="stat-buttons">
                     <button type="button" data-action="click->stats#decrease" data-stat="speed">–</button>
-                    <input type="text" name="speed" value="1" readonly class="stat-value" data-stats-target="speed">
+                    <input type="text" name="speed" value="1" readonly class="stat-value-create" data-stats-target="speed">
                     <button type="button" data-action="click->stats#increase" data-stat="speed">+</button>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                 <span class="stat-label">Agility</span>
                 <div class="stat-buttons">
                     <button type="button" data-action="click->stats#decrease" data-stat="agility">–</button>
-                    <input type="text" name="agility" value="1" readonly class="stat-value" data-stats-target="agility">
+                    <input type="text" name="agility" value="1" readonly class="stat-value-create" data-stats-target="agility">
                     <button type="button" data-action="click->stats#increase" data-stat="agility">+</button>
                 </div>
             </div>
