--- a/assets/styles/battle.css
+++ b/assets/styles/battle.css
@@ -684,3 +684,49 @@
     padding: 2px 8px;
     font-size: 12px;
 }
+.btn-action {
+    background-color: #000;
+    border: none;
+    color: #fff;
+    font-size: 0.8rem;
+    padding: 10px 20px;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.2s ease;
+    text-transform: uppercase;
+    min-width: 20px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.btn-action::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    border: 4px solid #fff;
+    box-sizing: border-box;
+    transition: all 0.2s ease;
+    z-index: 0;
+}
+
+.btn-action:hover {
+    transform: translate(-4px, -4px);
+}
+
+.btn-action:hover::before {
+    box-shadow: 0 0 10px var(--primary-color);
+    border: 4px solid var(--primary-color);
+}
+
+/* Pour que l'icône reste visible au-dessus du ::before */
+.btn-action i {
+    position: relative;
+    z-index: 1;
+    pointer-events: none;
+}
